Fixed overflowing background

--- a/src/styles/mobile/components/mobile_menu_nav_list.scss
+++ b/src/styles/mobile/components/mobile_menu_nav_list.scss
@@ -7,7 +7,7 @@
   width: 100%;
   transition-duration: 1s;
   transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-  margin-left: 50px;
+  left: 50px;
   top: 73px;
 
   // Initially, the line menu is hidden and below
